--- a/views/manageTags.ejs
+++ b/views/manageTags.ejs
@@ -4,26 +4,29 @@
   <title>
     <%= title %>
   </title>
-  <!-- <link rel="stylesheet" href="/styles.css"> -->
+  <link rel="stylesheet" href="/manageTagsStyles.css">
 </head>
 
 <body>
   <%- include("partials/navbar") %>
     <div>
+      <h2>Create a new Tag:</h2>
       <form action="/manageTags" method="post" id="createNewTagForm">
         <label for="tagName">Tag name:</label>
         <input type="text" name="tagName" id="tagName">
         <button type="submit">Create Tag</button>
       </form>
-
+      <h2>Delete an existing Tag:</h2>
       <form action="/manageTags/delete" method="post" id="deleteTag">
-        <legend>Item tags</legend>
-        <% tags.forEach(function(tag) { %>
-          <input type="checkbox" id="<%= tag%>" name="tag" value="<%= tag%>">
-          <label for="<%=tag%>">
-            <%= tag %>
-          </label>
-          <% }) %>
+        <fieldset>
+          <legend>Item tags</legend>
+          <% tags.forEach(function(tag) { %>
+            <input type="checkbox" id="<%= tag%>" name="tag" value="<%= tag%>">
+            <label for="<%=tag%>">
+              <%= tag %>
+            </label>
+            <% }) %>
+        </fieldset>
           <button type="submit">Delete Selected Tag(s)</button>
       </form>
     </div>
