Avoid issues when tags/components are empty and await db creation before redirecting to new item page

--- a/views/createNewItem.ejs
+++ b/views/createNewItem.ejs
@@ -16,11 +16,11 @@
         <div class="inputs-and-components">
           <div>
             <label for="itemName">Item Name</label>
-            <input type="text" id="itemName" name="itemName" placeholder="Blade of Doggos">
+            <input type="text" id="itemName" name="itemName" placeholder="Blade of Doggos" required>
             <label for="price">Price</label>
-            <input type="number" id="price" name="price" placeholder="3200">
+            <input type="number" id="price" name="price" placeholder="3200" required>
             <label for="image_url">Image url</label>
-            <input type="url" id="image_url" name="image_url" placeholder="https://i.imgur.com/PCy2z6c.jpeg">
+            <input type="url" id="image_url" name="image_url" placeholder="https://i.imgur.com/PCy2z6c.jpeg" required>
           </div>
           <div>
             <div>Added Components:</div>
