--- a/views/createNewItem.ejs
+++ b/views/createNewItem.ejs
@@ -21,6 +21,7 @@
             <input type="number" id="price" name="price" placeholder="3200" required>
             <label for="image_url">Image url</label>
             <input type="url" id="image_url" name="image_url" placeholder="https://i.imgur.com/PCy2z6c.jpeg" required>
+            <div class="image-example-url">Demo image URL to copy: https://i.imgur.com/PCy2z6c.jpeg</div>
           </div>
           <div>
             <div>Added Components:</div>
